--- a/Tex/experiment.tex
+++ b/Tex/experiment.tex
@@ -145,11 +145,11 @@ The samples were scanned with a mean step size of 20\,um in horizontal direction
 	\label{fig:setup}
 \end{figure}
 \paragraph{Imaging the Focus}
-To image the focus, 500\,nm iron (Goodfellow), 10\,um iron (Nilaco), 5\,um (Nilaco) and 20\,um (Goodfellow) copper foils with purity >99.99\% foils are mounted on the sample holder. The fluorescence is recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
+To image the focus, 500\,nm iron (Goodfellow), 10\,um iron (Nilaco), 5\,um (Nilaco) and 20\,um (Goodfellow) copper foils with purity >99.99\% are mounted on the sample holder. The fluorescence is recorded using the dual detector at a distance of $d_\text{dual}$=1\,m.
 \paragraph{Imaging Nanoparticles}
-For imaging the prepared iron nanoparticle and reference samples, the vacuum tube in front of the dual detector is partially removed to allow moving the octal detector, which will be the main imaging detector, to $d_\text{octal}\approx$43\,cm. The sample is slightly moved out of focus along the beam direction by 400\,um instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10,um iron foil measurement using the dual detector is taken to confirm the beam conditions.
+For imaging the prepared iron nanoparticle and reference samples, the vacuum tube in front of the dual detector is partially removed to allow moving the octal detector, which will be the main imaging detector, to $d_\text{octal}\approx$43\,cm. The sample is slightly moved out of focus along the beam direction by 400\,um instead of using any attenuation to increase the number of fluorescence photons. In between the nanoparticle samples, a single 10\,um iron foil measurement using the dual detector is taken to confirm the beam conditions.
 \paragraph{Imaging Crystals}
-For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The x-ray beam is attenuated by 0.4\,mm silicon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015}.
+For imaging GaAs single crystal samples, the distance between the octal detector and the sample is shortened to $d_\text{octal}\approx$14\,cm (with the vacuum tube between the dual detector and the sample removed). To reduce the amount of non-fluorescence photons  (air scattering, coherent scattering in the sample etc.), as well as gallium K$_\beta$ fluorescence on the detector, a 25\,um zinc filter is installed on the filter holder. The crystal surface is aligned to be parallel to the detector plane, and the scanning direction are aligned to be along the crystal surface within less than 1°. The X-ray beam is attenuated by 0.4\,mm silicon, resulting in 20-30\,uJ pulse energy at the sample for pulse energies at the upstream energy monitors of 400\,uJ \cite{yabashi2015}.
 
 \section{Data Processing and Analysis}
 As the amount of recorded data is huge, an efficient strategy for filtering on shots, preprocessing the data to eliminate interference and finally reconstruction has to be implemented.
@@ -293,7 +293,7 @@ The detector shift is corrected before calculating the correlations, the rotatio
 		\caption{Indexed lines on sample 2}
 	\end{subfigure}
 	\caption[Kossel lines on GaAs samples]{Indexed Kossel lines in the determined orientation overlaid over the mean of 5000 shots after background subtraction. For a list of all considered indices, see  \fref{tab:kosselpeaks}.}
-	\label{fig:kosselgaasline}
+	\label{fig:kosselgaaslines}
 \end{figure}
 
 \begin{table}[]
