--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%   DEFINITIONEN   %%%%%%%%%%%%%%%
 %\pdfminorversion=5 
 \RequirePackage[2020-02-02]{latexrelease}
-\documentclass[12pt,a4paper,oneside]{book}
+\documentclass[12pt,a4paper,twoside]{book}
 
 %Packages
 \usepackage[utf8]{inputenc}
@@ -16,7 +16,7 @@
 \usepackage{xfrac}
 \usepackage{graphicx}
 \usepackage{xcolor}
-\usepackage[textwidth=160mm,bottom=25mm,top=25mm,headsep=5mm,bindingoffset=5mm]{geometry}
+\usepackage[textwidth=160mm,bottom=25mm,top=25mm,headsep=5mm,bindingoffset=8mm]{geometry}
 \usepackage{listings}
 \usepackage{fancybox}
 \usepackage[small,bf]{caption} %Schönere Beschriftungen für Abbildungen und Tabellen
@@ -290,7 +290,6 @@
 	\acro{CDI}{Coherent Diffractive Imaging}
 	\acro{IDI}{Incoherent Diffractive Imaging}
 	\acro{FEL}{Free Electron Laser}
-	\acro{DoC}{Degree of Coherence}
 	\acro{HBT}{Hanbury-Brown Twiss}
 	\acro{NP}{Nano particle}
 	\acro{PS}{Polystyrene}
